Docker configuration and update of coments

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </a>
 </p>
 <p style="text-align: center">
-  - send a get request with Api Link/kelvinludwig/OnePiece and get what you
+  - send a get request with https://gitscraping.herokuapp.com/kelvinludwig/OnePiece and get what you
   need!!
 </p>
 <p style="text-align: center">
